#send button re-positioned back, alignment issues are per-browser, added issue to todo list.

--- a/JabbR/Chat.css
+++ b/JabbR/Chat.css
@@ -750,7 +750,7 @@ li.room {
     position: absolute;
     right: 0;
     width: 70px;
-    bottom: 13px;
+    bottom: 10px;
 }
 
 #enable-disable-toast {
